--- a/res/layout/activity_display_search_results.xml
+++ b/res/layout/activity_display_search_results.xml
@@ -4,19 +4,18 @@
     android:layout_height="match_parent"
     tools:context=".DisplaySearchResultsActivity" >
 
-    <TextView
+        <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:text="@string/hello_world" />
+   
 
-    <TextView
-        android:id="@+id/search_results"
+    <ListView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/listview"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="@string/hello_world" />
+        android:layout_height="wrap_content" />
 
 </RelativeLayout>
