--- a/res/layout/activity_display_course_details.xml
+++ b/res/layout/activity_display_course_details.xml
@@ -12,6 +12,8 @@
         android:layout_centerVertical="true" />
 
     <TableLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/TableLayout01"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
@@ -21,12 +23,23 @@
             android:id="@+id/tableRow1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >
+
+            <TextView
+                android:id="@+id/Row1Text"
+                android:text="" >
+            </TextView>
         </TableRow>
 
         <TableRow
             android:id="@+id/tableRow2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >
+
+            <TextView
+                android:id="@+id/Row2Text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+            </TextView>
         </TableRow>
 
         <TableRow
