--- a/res/layout/activity_display_course_details.xml
+++ b/res/layout/activity_display_course_details.xml
@@ -55,4 +55,13 @@
         </TableRow>
     </TableLayout>
 
+    <ProgressBar
+        android:id="@+id/progressBar1"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/header"
+        android:layout_alignRight="@+id/header"
+        android:layout_marginBottom="16dp" />
+
 </RelativeLayout>
