--- a/res/layout/activity_display_course_details.xml
+++ b/res/layout/activity_display_course_details.xml
@@ -15,7 +15,27 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true" />
+            android:padding="10dp" />
+
+        <Button
+            android:id="@+id/expandButton"
+            android:layout_width="280dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/header"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/round_button"
+            android:onClick="expandCollapseTable"
+            android:text="@string/course_details" />
+
+        <ProgressBar
+            android:id="@+id/progressBar1"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_below="@id/expandButton"
+            android:layout_centerHorizontal="true"
+            android:indeterminate="true" >
+        </ProgressBar>
 
         <TableLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
@@ -24,6 +44,7 @@
             android:layout_height="fill_parent"
             android:layout_alignParentLeft="true"
             android:layout_alignParentRight="true"
+            android:layout_below="@id/progressBar1"
             android:layout_marginLeft="7dp"
             android:layout_marginRight="7dp" >
 
@@ -32,30 +53,67 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" >
             </TableRow>
+        </TableLayout>
+
+        <Button
+            android:id="@+id/lecturesButton"
+            android:layout_width="280dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/TableLayout01"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/round_button"
+            android:onClick="expandCollapseLectures"
+            android:text="@string/course_lectures" />
+
+        <ProgressBar
+            android:id="@+id/progressBar2"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_below="@id/lecturesButton"
+            android:layout_centerHorizontal="true"
+            android:indeterminate="true" >
+        </ProgressBar>
+
+        <TableLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/TableLayout02"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
+            android:layout_below="@id/progressBar2"
+            android:layout_marginLeft="7dp"
+            android:layout_marginRight="7dp" >
 
             <TableRow
-                android:id="@+id/tableRow2"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent" >
+                android:id="@+id/tableRow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" >
             </TableRow>
         </TableLayout>
 
-        <ProgressBar
-            android:id="@+id/progressBar1"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_centerInParent="true"
-            android:indeterminate="true"
-            android:layout_marginTop="360dp" >
-        </ProgressBar>
-        <!-- <ProgressBar -->
-        <!-- android:id="@+id/progressBar1" -->
-        <!-- style="?android:attr/progressBarStyleLarge" -->
-        <!-- android:layout_width="40dp" -->
-        <!-- android:layout_height="40dp" -->
-        <!-- android:layout_alignBottom="@+id/header" -->
-        <!-- android:layout_alignRight="@+id/header" -->
-        <!-- android:layout_marginBottom="16dp" /> -->
+        <Button
+            android:id="@+id/resultsButton"
+            android:layout_width="280dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/TableLayout02"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/round_button"
+            android:onClick="expandCollapseTable"
+            android:text="@string/course_assignments" />
+
+        <Button
+            android:id="@+id/assigmentsButton"
+            android:layout_width="280dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/resultsButton"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/round_button"
+            android:onClick="expandCollapseTable"
+            android:text="@string/course_results" />
     </RelativeLayout>
 
 </ScrollView>
