User and courses are saved to class Session.java that holds data for application life time. Button graphics change when course is saved to user profile. When exiting application all current courses are saved to file.

--- a/res/drawable/course_selected_button.xml
+++ b/res/drawable/course_selected_button.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle" >
 
 
-    <solid android:color="#6D7B8D" />
+    <solid android:color="#49BD2A" />
 
     <padding
         android:bottom="6dp"
